--- a/vars.yml
+++ b/vars.yml
@@ -1,6 +1,8 @@
 ---
 - name: show a variable
   hosts: all
+  vars:
+    myvar: "from play level in playbook"
   tasks: 
     - name: show value of myvar variable
       debug:
