--- a/variables/facts.yml
+++ b/variables/facts.yml
@@ -3,10 +3,17 @@
   hosts: all
   tasks:
     - name: Product facts are collected
-      CHANGE_ME:
-
+      win_product_facts:
+ 
     - name: Disk facts are collected
-      CHANGE_ME:
-
+      win_disk_facts:
+    
     - name: Summary is written
-      CHANGE_ME:
+      win_copy:
+        content: |
+          OS: {{ ansible_facts['os_name'] }}
+          Machine ID: {{ ansible_facts['machine_id'] }}
+          Last Boot: {{ ansible_facts['lastboot'] }}
+          License Status: {{ ansible_facts['os_license_status'] }}
+          Disk Size: {{ ansible_facts['disks'][0]['size'] }}
+        dest: "{{ ansible_facts['user_dir'] }}\\Desktop\\summary-{{ ansible_facts['hostname'] }}.txt"
