--- a/variables/review.yml
+++ b/variables/review.yml
@@ -8,19 +8,19 @@
       register: orig_pagefile_info
 
     - name: Show original page file information
-      CHANGE_ME:
-        CHANGE_ME: CHANGE_ME
+      debug:
+        var: orig_pagefile_info
 
     - name: Manage page files on virtual machines
       win_pagefile:
-        remove_all: "{{ CHANGE_ME }}"
-        automatic: "{{ CHANGE_ME }}"
+        remove_all: "{{ remove }}"
+        automatic: "{{ auto }}"
       register: new_pagefile_info
 
     - name: Show new page file information
-      CHANGE_ME:
-        CHANGE_ME: CHANGE_ME
+      debug:
+        var: new_pagefile_info
 
     - name: Show current memory information
-      CHANGE_ME:
-        CHANGE_ME: CHANGE_ME
+      debug:
+        var: ansible_facts['memtotal_mb']
