--- a/control/install-iis.yml
+++ b/control/install-iis.yml
@@ -4,7 +4,6 @@
   hosts: win1.example.com
 
   tasks:
-
     - name: IIS service installed
       win_feature:
         name: Web-Server
@@ -14,9 +13,22 @@
       win_service:
         name: W3Svc
         state: started
-
+ 
     - name: Website index.html created
       win_copy:
-        content: "Hello world!"
+        content: "Ansible is great"
         dest: C:\Inetpub\wwwroot\index.html
+    
+    - name: Team-Application is installed
+      win_feature:
+        name: Team-Application
+        state: present
+      ignore_errors: yes
+
+    - name: Homepage index is set
+      win_uri:
+        url: http://win1.example.com
+        return_content: yes
+      register: index
+      failed_when: index.content != "Ansible is great"
 
